[package]
name = "s68k"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3.2"
regex = "1"
wasm-bindgen = { version = "0.2.83" , features=["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[profile.release]
opt-level = "s"