[package]
name = "s68k"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = "1.3.2"
regex = "1"
wasm-bindgen = { version = "0.2.83" , features=["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
console_error_panic_hook = { version = "0.1.1", optional = true }
console = "0.15.2"
lazy_static = "1.4.0"

[profile.release]
opt-level = 3

[features]
default = ["console_error_panic_hook"]
