[package]
name = "s68k"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitflags = {version = "2.6.0", features = ["serde"]}
regex = "1.10.5"
wasm-bindgen = { version = "0.2.92" , features=["serde-serialize"]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = { version = "0.1.7", optional = true }
console = "0.15.8"
lazy_static = "1.5.0"

[profile.release]
opt-level = 3

[features]
default = ["console_error_panic_hook"]
